<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="#fff"

    tools:context="com.example.ajirigunn.calsci.Converter">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lll"
            android:orientation="horizontal"
            android:background="@drawable/psiback"></LinearLayout>

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#005FFF"
            android:elevation="16dp"
            android:id="@+id/cb"
            android:theme="@style/AppTheme"
            android:layout_marginTop="0dp"
            android:titleTextColor="?attr/titleTextColor"
            android:subtitleTextColor="#fff"
            android:transitionGroup="false"
            android:touchscreenBlocksFocus="true"/>




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:alpha="0.82"
            tools:context="com.example.ajirigunn.gunner.Converter"
            android:background="#fff"
            android:id="@+id/pa"
            android:layout_gravity="center_horizontal|top">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView2"
                android:layout_marginTop="200dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_centerHorizontal="true"
                >
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#000"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_weight="1">
                                <Button
                                    android:layout_width="wrap_content"
                                    android:textColor="#000"

                                    android:background="#fff"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center"
                                   android:layout_weight="1"
                                    android:id="@+id/AREA"
                                    android:layout_margin="10dp"
                                    android:onClick="area"
                                  />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:text="@string/area"
                                    android:textColor="#000"
                                    android:fontFamily="serif"/>
                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_weight="1">
                                <Button
                                    android:layout_width="wrap_content"
                                    android:layout_weight="1"
                                    android:textColor="#000"
                                    android:background="#fff"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center"
                                    android:layout_margin="10dp"
                                    android:id="@+id/ENERGY"
                                    android:onClick="energy"
                                />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:text="@string/energy"
                                    android:textColor="#000"
                                    android:fontFamily="serif"/>
                            </LinearLayout>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_weight="1">
                                <Button
                                    android:layout_width="wrap_content"
                                    android:textColor="#000"
                                    android:background="#fff"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:id="@+id/LENGTH"
                                    android:onClick="length"
                                    android:elevation="28dp"
                                    android:layout_margin="10dp"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:text="@string/length"
                                    android:textColor="#000"
                                    android:fontFamily="serif"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_weight="1">
                                <Button
                                    android:layout_width="wrap_content"
                                    android:layout_weight="1"
                                    android:textColor="#000"
                                    android:background="#fff"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center"
                                    android:layout_margin="10dp"
                                    android:elevation="28dp"
                                    android:id="@+id/MASS"
                                    android:onClick="mass"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:text="@string/mass"
                                    android:textColor="#000"
                                    android:fontFamily="serif"/>
                            </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_weight="1">
                                <Button
                                    android:layout_width="wrap_content"
                                    android:textColor="#000"
                                    android:background="#fff"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center"
                                    android:id="@+id/PRESSURE"
                                    android:layout_weight="1"
                                    android:layout_margin="10dp"
                                    android:elevation="28dp"
                                    android:onClick="pressure"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:text="@string/pressure"
                                    android:textColor="#000"
                                    android:fontFamily="serif"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_weight="1">
                                <Button
                                    android:layout_width="wrap_content"
                                    android:textColor="#000"
                                    android:background="#fff"
                                    android:layout_weight="1"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center"
                                    android:id="@+id/SPEED"
                                    android:layout_margin="10dp"
                                    android:onClick="speed"
                                    android:elevation="28dp"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:text="@string/speed"
                                    android:textColor="#000"
                                    android:fontFamily="serif"/>
                            </LinearLayout>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_weight="1">

                                <Button
                                    android:layout_width="wrap_content"
                                    android:textColor="#000"
                                    android:background="#fff"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:layout_margin="10dp"
                                    android:elevation="28dp"
                                    android:id="@+id/TEMPERATURE"
                                    android:onClick="temperature"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:text="@string/temperature"
                                    android:textColor="#000"
                                    android:fontFamily="serif"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_weight="1">


                                <Button
                                    android:layout_width="wrap_content"
                                    android:textColor="#000"
                                    android:background="#fff"
                                    android:layout_weight="1"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center"
                                    android:layout_margin="10dp"
                                    android:id="@+id/VOLUME"
                                    android:onClick="volume"
                                    android:elevation="28dp"
                                   />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:text="@string/volume"
                                    android:textColor="#000"
                                    android:fontFamily="serif"/>
                            </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </ScrollView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button113"
                android:layout_marginTop="61dp"
                android:background="#fff"
                android:drawableTop="@drawable/scale2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <com.google.android.gms.ads.AdView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ad3"
                ads:adSize="BANNER"
                ads:adUnitId="@string/adid3"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/button113"
                android:layout_centerHorizontal="true" />
            <LinearLayout
                android:layout_marginTop="70dp"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                android:id="@+id/group"

                android:theme="@style/AppTheme.AppBarOverlay"
                />
        </RelativeLayout>
    </FrameLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu"
        android:id="@+id/nview">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
